[package]
name = "runget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

[dependencies.serenity]
version = "0.11.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]

[dependencies.tokio]
version = "1.19.2"
features = ["macros", "signal", "rt-multi-thread"]
